src/objects/Success_Team__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Support Success Teams</relationshipLabel>
        <relationshipName>Success_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_User_Active__c</fullName>
        <formula>User__r.IsActive  = True</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is User Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Choose "Case Notification" to be notified when a Case is created for this Account. 
Choose "Case Team" to be emailed updates for all open Cases under this Account.</description>
        <inlineHelpText>Choose "Case Notification" to be notified when a Case is created for this Account. 
Choose "Case Team" to be emailed updates for all open Cases under this Account.</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Case Notification</fullName>
                </value>
                <value>
                    <fullName>New Case Notification &amp; Case Team</fullName>
                </value>
                <value>
                    <fullName>Case Notification</fullName>
                    <isActive>false</isActive>
                    <label>Case Notification</label>
                </value>
                <value>
                    <fullName>Case Notification &amp; Case Team</fullName>
                    <isActive>false</isActive>
                    <label>Case Notification &amp; Case Team</label>
                </value>
                <value>
                    <fullName>Case Team</fullName>
                    <isActive>false</isActive>
                    <label>Case Team</label>
                </value>
                <value>
                    <fullName>New Case Team</fullName>
                    <isActive>false</isActive>
                    <label>New Case Team</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Member_Key__c</fullName>
        <formula>Account__c + '#' + '#' +  User__c</formula>
        <label>Unique Member Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Only Standard and Customer Portal User can be on a Success Team</errorMessage>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Customer Portal User, Customer Portal Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Success_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Customer Success Role for Strategic Accounts to trigger automation of Case Notifications or adding tot the Case Team.</description>
    <label>Support Success Team</label>
    <nameField>
        <displayFormat>ST{000000}</displayFormat>
        <label>Success Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Success Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Support_Success_Teams</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Role__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Support Success Teams</label>
    </listViews>
    <validationRules>
        <fullName>Account_Related_Contacts</fullName>
        <active>true</active>
        <errorConditionFormula>AND( User__r.Contact.AccountId  &lt;&gt;  Account__r.Id, User__r.Profile.Name = 'Pivotal - Community Registered User')</errorConditionFormula>
        <errorMessage>Non Account related community users can not be added to success team!!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SP_Qualified</fullName>
        <active>true</active>
        <errorConditionFormula>User__r.EHSP_Qualified__c = false &amp;&amp; text(Account__r.Special_Handling__c) = 'SP - Special Practices'</errorConditionFormula>
        <errorMessage>This Standard User is not SP Qualified</errorMessage>
    </validationRules>
</CustomObject>